Fix spacing, add pages

--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -18,8 +18,9 @@
 .form-grid {
     display: grid;
     grid-template-columns: 150px auto;
-    gap: 50px;
+    gap: 20px;
     align-items: center;
+    padding: 2%;
 }
 
 label {
@@ -40,7 +41,7 @@ input {
     height:30px;
     text-align: center;
     margin-bottom: 25%;
-    padding-top: 25%;
+    padding-top: 30%;
     align-items: center;
     outline: auto;
 }
